# AyED-Nivelacion

./: CMakeLists.txt  Ejercicio 1 - Quiniela.cbp  Ejercicio 1 - Quiniela.depend  Ejercicio 1 - Quiniela.layout  README.md  carton.c  carton.h  juego.c  juego.h  main.c  persona.c  persona.h  sorteo.c  sorteo.h
